nsp/alpha.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: a-ns
---
apiVersion: v1
kind: Pod
metadata:
  name: alpha
  namespace: a-ns
  labels:
    app: alpha
    run: nginx
    team: alpha
spec:
  containers:
    - name: nginx
      imagePullPolicy: IfNotPresent
      image: joshrosso/nginx-curl:v2

---
apiVersion: v1
kind: Service
metadata:
  name: alpha
  namespace: a-ns
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: alpha
