nsp/beta.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: b-ns
---
apiVersion: v1
kind: Pod
metadata:
  name: beta
  namespace: b-ns
  labels:
    app: beta
    run: nginx
    team: beta
spec:
  containers:
    - name: nginx
      imagePullPolicy: IfNotPresent
      image: joshrosso/nginx-curl:v2

---
apiVersion: v1
kind: Service
metadata:
  name: beta
  namespace: b-ns
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: beta
