nsp/team-ax.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: ax
  namespace: team-ax
  labels:
    app: ax
    run: nginx
    team: ax
spec:
  containers:
    - name: nginx
      imagePullPolicy: IfNotPresent
      image: joshrosso/nginx-curl:v2

---
apiVersion: v1
kind: Service
metadata:
  name: ax
  namespace: team-ax
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: ax
