nsp/team-sonic.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: sword
  namespace: team-sword
  labels:
    app: sword
    run: nginx
    team: sword
spec:
  containers:
    - name: nginx
      imagePullPolicy: IfNotPresent
      image: joshrosso/nginx-curl:v2

---
apiVersion: v1
kind: Service
metadata:
  name: sword
  namespace: team-sword
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: sword
