nsp/nsp-team-alpha-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-alpha-egress
  namespace: a-ns
spec:
  # pod(s) this policy "applies" to
  podSelector:
    matchLabels:
      app: alpha
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: b-ns
      podSelector:
        matchLabels:
          app: beta
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
