nsp/nsp-team-beta-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-beta-ingress
  namespace: b-ns
spec:
  # pod(s) this policy "applies" to
  podSelector:
    matchLabels:
      app: beta
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: a-ns
      podSelector:
        matchLabels:
          app: alpha
